Moved blog to codepen

--- a/src/data/config.json
+++ b/src/data/config.json
@@ -9,7 +9,7 @@
 			"url": "/about-jon-beebe.html"
 		},
 		"blog": {
-			"url": "http://bejonbee.roon.io/"
+      "url": "http://codepen.io/somethingkindawierd/blog"
 		}
 	}
 }
