New layout for stories

--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,14 @@ defaults:
             type: posts
         values:
             layout: post
+    -
+        scope:
+            path: "" # empty string for all files
+            type: stories
+        values:
+            layout: story
+            author: Jonathan Beebe
 
 collections:
-- stories
+  stories:
+    output: true
