--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,9 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'jekyll serve'. If you change this file, please restart the server process.
 
-gems:
+plugins:
   - jekyll-redirect-from
+  - jekyll-feed
 
 # Site settings
 title: somethingkindawierd.com
@@ -16,9 +17,9 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: ""
 domain_name: 'http://somethingkindawierd.com'
 url: "http://somethingkindawierd.com"
-github_username:  somethingkindawierd
+github_username: somethingkindawierd
 google_analytics: 'UA-4889093-2'
-permalink:       /:year/:month/:title.html
+permalink: /:year/:month/:title.html
 timezone: America/Chicago
 future: false
 
